Fix code word wrapping

--- a/src/static/css/relaunch.css
+++ b/src/static/css/relaunch.css
@@ -74,7 +74,7 @@ p code {
   margin: 0 0.2em;
   padding: 0.2rem 0.2rem 0.1rem;
   font-weight: normal;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 q {
